<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="165dp"
    android:layout_height="250dp"
    android:layout_marginBottom="18dp"
    app:cardCornerRadius="9dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorTertiary"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_book"
            android:layout_width="98dp"
            android:layout_height="151dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/book_title"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/item_book_proof" />

        <TextView
            android:id="@+id/title_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingTop="6dp"
            android:text="@string/title"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/book_price"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
