<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="?attr/colorTertiary"
        card_view:cardCornerRadius="16dp"
        android:layout_margin="8dp"
        card_view:cardElevation="7dp">

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon_person"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/message_user"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/message_exit"
                android:textColor="?attr/android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_not"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/message_close"
                    app:backgroundTint="#C32929"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_close"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    card_view:iconTint="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_yes"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/message_check"
                    app:backgroundTint="#28CB30"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_check"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    card_view:iconTint="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>